--- a/ClientApplication/package.json
+++ b/ClientApplication/package.json
@@ -18,7 +18,8 @@
   "files": [
     "index.js",
     "index.html",
-    "index.css"
+    "index.css",
+    "renderer.js"
   ],
   "keywords": [
     "electron-app",
